--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>PRUEBA DE SUBIR PAGINA A INTERNET GRATIS</h1>
+      <h1>PRUEBA DE SUBIR PAGINA A INTERNET GRATIS v2</h1>
     </header>
 
     <nav>
